# devfest-2025-from-code-to-deployment-build-mcp-tools-for-gemini-and-adk

./: .enc.env  .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  Makefile  README.md  architecture_diagram.md  architecture_overview.txt  compose-db.yaml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  install-tools.sh
app/: app.py  config.py  factory.py
app/db/: indexes.py  mongo.py  repositories.py  schemas.py
app/services/: langgraph.py  mcp.py
app/tools/: weather_tool.py
app/utils/: line_sig.py  time.py
app/webhooks/: line.py
hurl/: 01_init_session.hurl  02_submit_agent_a.hurl
scripts/: explain.py  submit-agent-a.sh
src/agent_a/: __init__.py  agent.py
src/agent_with_mcp_adk/: __init__.py  app.py
src/mcp_server/: tools.py
src/tests/: test_mongo.py
