[project]
name = "agent-with-mcp-adk"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Karn Wong", email = "karn@karnwong.me" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.1",
    "google-adk[a2a]>=1.17.0",
    "line-bot-sdk>=3.20.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

#[project.scripts]
#agent-with-mcp-adk = "agent_with_mcp_adk:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
